--- a/PÁGINA- NOSSA HISTÓRIA/css/nossahistoria.css
+++ b/PÁGINA- NOSSA HISTÓRIA/css/nossahistoria.css
@@ -1,43 +1,85 @@
 body{
-    background-color: #f9d40a
+    background-color: #Ffffff
     
 }
+  
 
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+      
+    
+
+
+/*....... IMAGEM DO MAPA DA CONNECTED CONTROL TOWER .........*/
 
 .hm1{
     position: absolute;
     top: 95px; left: 480px;
   }
+  
 
 
-  <!DOCTYPE html>
-    <html lang="en" >
-    
-    <head>
-      <meta charset="UTF-8">
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+  
+
+
+/*..... CONNECTED .....*/
+
+.connected{
+  position: absolute;
+  top: 80px; right: -50px;
+}
+
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
       
     
-        <link rel="apple-touch-icon" type="image/png" href="https://cpwebassets.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png" />
-    
-        <meta name="apple-mobile-web-app-title" content="CodePen">
-    
-        <link rel="shortcut icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico" />
-    
-        <link rel="mask-icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-b4b4269c16397ad2f0f7a01bcdf513a1994f4c94b8af2f191c09eb0d601762b1.svg" color="#111" />
-    
-    
-    
+
+/*..... CONTROL .....*/
+
+.control{
+  position: absolute;
+  top: 200px; right: -50px;
+}
+
+
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+
+
+/*..... TOWER .....*/
+
+.tower{
+  position: absolute;
+  top: 320px; right: -53px;
+}
+
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
       
-      <title>CodePen - Responsive slider timeline with Swiper</title>
-      
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     
-      <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css'>
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800'>
-      
-    <style>
-    html,
-    body,
+
+   /*.......... LINHA DO TEMPO .........*/
+
     .container {
       height: 100%;
     }
@@ -51,16 +93,11 @@ body{
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #f9d40a;
+     
       flex-direction: column;
     }
     
-    .title {
-      font-size: 38px;
-      color: #616161;
-      font-style: italic;
-      font-weight: 800;
-    }
+    
     
     .timeline {
       width: 122%;
@@ -173,7 +210,7 @@ body{
       text-align: center;
       opacity: 1;
       background: transparent;
-      color: #f9d40a;
+      color: #d4a024;
       margin: 15px 0 !important;
       position: relative;
     }
@@ -190,7 +227,7 @@ body{
       transition: 0.2s;
     }
     .timeline .swiper-pagination-bullet-active {
-      color: #d4a024;
+      color: #f9d40a;
     }
     .timeline .swiper-pagination-bullet-active::before {
       transform: scale(1);
@@ -277,9 +314,54 @@ body{
         right: 25%;
       }
     }
-    </style>
     
-      <script>
-      window.console = window.console || function(t) {};
-    </script>
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+   
   
+ /*..... IMAGEM DE FLUXO .....*/
+
+ .img1{
+  position: absolute;
+  top: 1480px; left: 640px;
+}
+  
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+      
+    
+
+/*..... VÍDEO DE EXPLICATIVA .....*/
+
+.vid1{
+  position: absolute;
+  top: 1500px; left: 5px;
+}
+  
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+  
+
+
+/*..... CARROSEL DE APRESENTAÇÃO ...*/
+
+.apresentação{
+  position: absolute;
+  top: 2020px; left: 20px;
+  width: 1310px; height: 510;
+}
+    
+
