--- a/PÁGINA- NOSSA HISTÓRIA/css/nossahistoria.css
+++ b/PÁGINA- NOSSA HISTÓRIA/css/nossahistoria.css
@@ -356,12 +356,112 @@ body{
   
 
 
+/*..... ESPAÇO .....*/
+
+.espaço{
+  position: absolute;
+  top: 1900px; left: 3px;
+}
+
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+
+
+/*..... ESPAÇO RESERVADO .....*/
+
+
+
+.estrada{
+  position: absolute;
+  top: 2000px; left: 10px;
+}
+
+.carro{
+  position: relative;
+  top: 680px;
+}
+
+.carro1{
+  position: relative;
+  top: 580px;
+}
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+
+svg {
+  font-family: 'Russo One', sans-serif;
+  position: absolute; 
+  top: 2020px;
+  width: 100%; height: 100%;
+
+}
+svg text {
+  text-transform: uppercase;
+  animation: stroke 5s infinite alternate;
+  stroke-width: 2;
+  stroke: #D40511;
+  font-size: 120px;
+}
+@keyframes stroke {
+  0%   {
+    fill: rgba(72,138,20,0); stroke: #D40511;
+    stroke-dashoffset: 25%; stroke-dasharray: 0 50%; stroke-width: 2;
+  }
+  70%  {fill: rgba(72,138,20,0); stroke: #D40511; }
+  80%  {fill: rgba(72,138,20,0); stroke: #D40511; stroke-width: 3; }
+  100% {
+    fill: #D40511; stroke: rgba(54,95,160,0); 
+    stroke-dashoffset: -25%; stroke-dasharray: 50% 0; stroke-width: 0;
+  }
+}
+
+
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+.estrada1{
+  position: absolute;
+  top: 2600px; left: 10px;
+}
+
+.carro2{
+  position: relative;
+  top: 1170px;
+}
+
+.carro3{
+  position: relative;
+  top: 1070px;
+}
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+  
+
+
 /*..... CARROSEL DE APRESENTAÇÃO ...*/
 
 .apresentação{
   position: absolute;
-  top: 2020px; left: 20px;
+  top: 3000px; left: 20px;
   width: 1310px; height: 510;
 }
-    
+ 
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+
+/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+ 
+
+
 
